// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/songs/_id/_chart.vue snapshot test renders "Edit" button if admin 1`] = `
<section class="section">
  <h1 class="title">MAKE IT BETTER</h1>
  <h2 class="subtitle">mitsu-O! / DDR 1st</h2>
  <h2 class="subtitle">BPM 119</h2>
  <div class="buttons">
    <b-button-stub type="is-info" iconleft="pencil-box" nativetype="button" tag="nuxt-link" to="/admin/song/8Il6980di8P89lil1PDIqqIbiq1QO8lQ">
      編集
    </b-button-stub>
  </div>
  <div class="content columns is-multiline">
    <chart-detail-stub song="[object Object]" chart="[object Object]" open="true" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
  </div>
  <div class="content columns is-multiline">
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
  </div>
</section>
`;

exports[`pages/songs/_id/_chart.vue snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">MAKE IT BETTER</h1>
  <h2 class="subtitle">mitsu-O! / DDR 1st</h2>
  <h2 class="subtitle">BPM 119</h2>
  <!---->
  <div class="content columns is-multiline">
    <chart-detail-stub song="[object Object]" chart="[object Object]" open="true" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
  </div>
  <div class="content columns is-multiline">
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
    <chart-detail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chart-detail-stub>
  </div>
</section>
`;
